openshift/site_registry/dev/backend/site_backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"site-backend:dev","namespace":"c6a6e5-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"site-backend\")].image","paused":false}]'
  name: site-backend
  namespace: c6a6e5-dev
  labels:
    app.kubernetes.io/name: site-backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: site-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: site-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: '3000'
        prometheus.io/path: "/metrics"
    spec:
      initContainers: # The container that will do the initial migrations.
        - name: site-backend-init
          image: "image-registry.openshift-image-registry.svc:5000/c6a6e5-tools/site-backend-init:dev"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
      containers:
        - name: site-backend
          image: "image-registry.openshift-image-registry.svc:5000/c6a6e5-tools/site-backend:dev"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            successThreshold: 1
            failureThreshold: 3
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - mountPath: /logs
              name: log-storage
            - mountPath: /graphql
              name: graphql-storage
      volumes:
        - name: log-storage
          emptyDir: {}
        - name: graphql-storage
          emptyDir: {}
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - site-backend
